implement broadcaster frontend page
